fix for z-index issus with type/prop menus

--- a/trunk/www/topic/topic.less
+++ b/trunk/www/topic/topic.less
@@ -320,6 +320,7 @@ The .data-table object should hold non-simple data (eg. Mediator or CVT)
 }
 
 .data-list li .combo-menu {
+  list-style: none;
   position: absolute;
   right: 0;
   top: 0;
